2008-02-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/error_counters.cpp, itpp/comm/error_counters.h: Make
	const member functions actually const

	Introduce the keyword const for member functions like
	get_errorrate() that do not change any member variables. Patch
	submitted by Martin Sents.

	* itpp/comm/channel.h: Unhide Fading_Generator::generate(int)
	method for derived classes

	The "cvec Fading_Generator::generate(int no_samples)" function
	used to be hidden. This change makes it accessible from derived
	classes. Patch submitted by Martin Sents.

	* itpp/base/converters.h: Add specialisations of to_cvec(cvec) and
	to_cmat(cmat)

	These specialisations make it possible to call to_cvec() and
	to_cmat() with complex arguments. The functions then simply return
	their argument. This fixes the problem with instantiating the
	Freq_Filt class with std::complex<double> type. Patch submitted by
	Martin Sents.

	* itpp/base/math/elem_math.h: Documentation improvements

	Clarify that sqr(cvec) and sqr(cmat) compute the absolute square,
	not simply the square. Patch submitted by Martin Senst.

	* itpp/comm/ldpc.h: Introduce LDPC_Code::get_ninfo() member
	function

	This function returns the number of information bits in a
	codeword. Thanks to Martin Senst for submitting this patch.

	* itpp/comm/ldpc.cpp: Correct the length of the result of decode()

	The decode() function used to return the first "ncheck" bits of
	the decoded codeword, but we want the first "nvar-ncheck" bits.

	Thanks to Martin Senst for submitting this patch.

2008-02-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/users_guide.doc, doc/tutorial/src/mimoconv.cpp,
	itpp/base/matfunc.h, itpp/base/vec.h, itpp/comm/crc.cpp,
	itpp/signal/filter_design.cpp, itpp/signal/freq_filt.cpp,
	itpp/signal/poly.cpp, itpp/signal/transforms.cpp,
	tests/vec_test.cpp, tests/vec_test.ref: Revert deprecation of
	replace_mid() method of Vec class
