@@ -8,9 +8,9 @@ BASE_TESTS = array_test bessel_test blas_test circular_buffer_test	\
 BASE_LAP_TESTS = cholesky_test det_test eigen_test inv_test ls_solve_test \
   lu_test matfunc_test qr_test schur_test svd_test
 
-COMM_TESTS = bch_test commfunc_test convcode_test galois_test		\
-  interleaver_test ldpc_test llr_test modulator_test pulse_shape_test	\
-  rec_syst_conv_code_test reedsolomon_test turbo_test
+COMM_TESTS = bch_test commfunc_test convcode_test error_count_test	\
+  galois_test interleaver_test ldpc_test llr_test modulator_test	\
+  pulse_shape_test rec_syst_conv_code_test reedsolomon_test turbo_test
 COMM_LAP_TESTS = modulator_nd_test
 COMM_FFT_TESTS = channel_test
 
@@ -76,6 +76,7 @@ commfunc_test_SOURCES = commfunc_test.cpp
 convcode_test_SOURCES = convcode_test.cpp
 det_test_SOURCES = det_test.cpp
 eigen_test_SOURCES = eigen_test.cpp
+error_count_test_SOURCES = error_count_test.cpp
 fastica_test_SOURCES = fastica_test.cpp
 fastica_test_CPPFLAGS = -DFASTICA_TEST_FILE=\"$(srcdir)/fastica_test_data.txt\" $(AM_CPPFLAGS)
 fastmath_test_SOURCES = fastmath_test.cpp
