@@ -1,5 +1,9 @@
 2008-02-28  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* tests/Makefile.am, tests/error_count_test.cpp,
+	tests/error_count_test.ref: Add simple test program for BERC and
+	BLERC error counters
+
 	* itpp/comm/error_counters.cpp, itpp/comm/error_counters.h: Make
 	const member functions actually const
 
